--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="google-signin-client_id" content="131438060639-6qc8jevsav1de0ksrh45a7j7up9ficnp.apps.googleusercontent.com">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <script src="post.js"></script>
+    <script src="script.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     
     <title>Document</title>
