--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           console.log('Name: ' + profile.getName());
           console.log('Image URL: ' + profile.getImageUrl());
           console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
-          window.open("https://www.salesforce.com/in/?ir=1");
+          window.open("post.html");
           
         }
       
