--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                   <h6 class="text-center"> OR </h6>
 
 
-                  <div class="g-signin2" data-onsuccess="onSignIn"></div>
-  
-
+                  <div class="g-signin2" data-onsuccess="onSignIn" ></div>
+  	
+		 window.location.href = 'http://www.google.com';
 
 
                   <p>Don't have an account? <a href="#!" class="link-info">Register here</a></p>
